fix Ophiuchus help quote covering its x button

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1360,7 +1360,7 @@ p {
 
 .portfolio-block .work-card {
   background-color: rgba(255, 255, 255, 0.1);
-  height: 260px;
+  height: 250px;
   width: 300px;
   border-radius: 10px;
   position: relative;
@@ -2165,6 +2165,7 @@ p {
   top: -15px;
   left: -70px;
   font-weight: 750;
+  width: 80%;
 }
 
 /* -- ↓ ↓ ↓ some responsiveness ↓ ↓ ↓ -- */
